Qadim Model UI: Fix misaligned table grids Qadim Model UI: Fix button issues Qadim Model UI: Bug issues - Operators and Complimentory operators do not match in grid

--- a/BusinessModelPlanner/web/resources/css/dragndrop.css
+++ b/BusinessModelPlanner/web/resources/css/dragndrop.css
@@ -20,6 +20,17 @@ body {
     margin-bottom:0.5em;
     padding: 4px;
     cursor: default;
+
+}
+
+.draggablee {
+    width: 100px;
+    height: 50px;
+    background-color: #ff7373;
+    border: 1px solid #fffbd7;
+    margin-bottom:0.5em;
+    padding: 4px;
+    cursor: default;
 }
 
 .active {
@@ -30,6 +41,13 @@ body {
     width: 100px;
     height: 40px;
 }
+
+#droppablee {
+    font-size: 14pt;
+    width: 100px;
+    height: 40px;
+}
+
 #droppableHolder {
     margin-top: auto;
 }
